# starbot

./: .env.template  .gitignore  CHANGELOG.md  LICENSE  README.md  config.py  config_wizard.py  empty_rb.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  start.py  start_desktop.py  start_gui.py  start_starbot.bat  start_webui.py  启动Starbot.bat
actions/: executor.py  input_win32.py  web_helpers.py
comms/: discord_client.py  gui_client.py  local_service.py  text_safety.py  webui_server.py
core/: adapter.py  brain.py  notifier.py  op_log.py  session_controller.py  skill_manager.py  task_manager.py
desktop/: main.js  package-lock.json  package.json  preload.js
memory/: store.py
skills/: browser_agent.py  currency.py  dev_tools.py  example.py  math_tools.py  monitor.py  news.py  pomodoro.py  qrcode_skill.py  reminder.py  self_learn.py  smart_search.py  stock.py  sysmon.py  translate.py  video_learn.py  weather.py
src/: agent.js  cli.js  client.js  config.js  conversation.js  daemon.js  daemon_store.js  index.js  render.js  result_store.js
starbot/: __init__.py  __main__.py  agent.py  client.py  config.py  conversation.py
tests/: test_adapter.py  test_brain.py  test_changelog_release.py  test_gui_client_smoke.py  test_local_service.py  test_memory.py  test_session_controller.py  test_skill_manager_external.py  test_start_desktop_smoke.py  test_task_manager.py  test_text_safety.py  test_web_helpers.py  test_webui_server_smoke.py
tools/: __init__.py  changelog_release.py
webui/: app.js  index.html  styles.css
(+45 files in other folders)
